--- a/website/index.html
+++ b/website/index.html
@@ -106,7 +106,7 @@
             <li>Copyright &copy;
                 2024</li>
             <li>All Rights Reserved</li>
-            <li><a href="../index.php">Web Design by May(Hyeyeon) Kim</a></li>
+            <li><a href="../index.html">Web Design by May(Hyeyeon) Kim</a></li>
             <li><a id="html-checker" href="#">HTML Validation</a></li>
             <li><a id="css-checker" href="#">CSS Validation</a></li>
         </ul>
